# gl-cube

./: .gitignore  CMakeLists.txt  Makefile  README.md  gmon.out  old  prepare.sh
shaders/: basic_f.glsl  basic_f_diffuse.glsl  basic_v.glsl
src/: camera.c  camera.h  cube.c  cube.h  light.c  light.h  main.c  mesh.c  mesh.h  model.c  model.h  prog.c  prog.h  render.c  render.h  shader.h  texture.c  texture.h  util.c  util.h
